# Roadmaps-Projects

./: LICENSE  README.md
GitHub User Activity/: .gitignore  README.md  main.py
GitHub User Activity/controllers/: controllers.py
GitHub User Activity/models/: models.py
GitHub User Activity/views/: views.py
Number Guessing Game/: Consigne.txt  main.py
Single-Page/: index.html  style.css
Task-Tracker-CLI/: .gitignore  README.md  main.py
Task-Tracker-CLI/controllers/: tasks_controllers.py
Task-Tracker-CLI/data/: task.json
Task-Tracker-CLI/models/: tasks_models.py
Task-Tracker-CLI/views/: tasks_views.py
blog/: .gitignore  articles.txt  main.py  pyproject.toml
blog/static/css/: style.css
blog/templates/: article.html  dashbord.html  home.html  layout.html  login.html
blog/utils/: add_post.py  load_post.py
expenseTracker/: .gitignore  README.md  controllers.py  db_models.py  main.py  pyproject.toml  views.py
numberGuessing-Game/: README.md  main.py  pyproject.toml
unit-converter/: README.md  index.html
unit-converter-py/: main.py  pyproject.toml
unit-converter/assets/css/: style.css
unit-converter/assets/js/: script.js
unit-converter/pages/: temperature.html  weight.html
