[project]
name = "expensetracker"
version = "0.1.0"
description = "A simple expense tracker application to manage my finances"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
# Version cible Python
target-version = "py312"

# Longueur max des lignes
line-length = 88

# Dossiers à exclure
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "dist",
    "build",
]

# Fixer automatiquement les erreurs
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (sécurité)
    "PT",  # flake8-pytest-style
]

ignore = [
    "E501",   # line too long (géré par formatter)
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "S101",   # use of assert (ok en tests)
]
